--- a/package.json
+++ b/package.json
@@ -7,17 +7,13 @@
     "start": "node server.js",
     "start:real": "USE_REAL_SCRAPING=true node server.js",
     "start:mock": "USE_REAL_SCRAPING=false node server.js",
-    "dev": "nodemon server.js",
-    "test": "node test-scraper.js",
-    "postinstall": "node install-chromium.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "node-cron": "^3.0.3",
-    "puppeteer": "^21.6.1",
-    "puppeteer-core": "^21.6.1",
-    "chrome-aws-lambda": "^10.1.0"
+    "puppeteer": "^21.6.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
